unpackaged/main/default/objects/nbavs__LiveCallStatus__c/nbavs__LiveCallStatus__c.object-meta.xml
<CustomObject>
    <label>Live Call Status</label>
    <nameField>
        <label>Live Call Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Calls Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>