unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__AnswerTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AnswerTime__c</fullName>
    <label>Answer Time</label>
    <type>DateTime</type>
</CustomField>