unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__CreatedTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CreatedTime__c</fullName>
    <label>Created Time</label>
    <type>DateTime</type>
</CustomField>