unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__Direction__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Direction__c</fullName>
    <description>Call Direction</description>
    <label>Direction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>