unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__From__c.field-meta.xml
<CustomField>
    <fullName>nbavs__From__c</fullName>
    <label>From</label>
    <length>32</length>
    <type>Text</type>
</CustomField>