unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__FromUser__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Live Calls Status</relationshipLabel>
    <relationshipName>LiveCallsStatus</relationshipName>
    <type>Lookup</type>
</CustomField>