unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__FromUUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromUUID__c</fullName>
    <label>From UUID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>