unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__To__c.field-meta.xml
<CustomField>
    <fullName>nbavs__To__c</fullName>
    <label>To</label>
    <length>32</length>
    <type>Text</type>
</CustomField>