unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__ToUser__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Live Calls Status (Natterbox User)</relationshipLabel>
    <relationshipName>Live_Calls_Status</relationshipName>
    <type>Lookup</type>
</CustomField>