unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__ToUUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ToUUID__c</fullName>
    <label>To UUID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>