unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__UserFrom__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UserFrom__c</fullName>
    <label>User From</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>