unpackaged/main/default/objects/nbavs__LiveCallStatus__c/fields/nbavs__UserTo__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UserTo__c</fullName>
    <label>User To</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>